Scroll: Fixed issue with pages overflowing on mobile

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -868,7 +868,7 @@ nav {
   & > ul,
   & > ol {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     /* These gaps determine the spacing between all content. Be careful!! */
     gap: var(--space-m) var(--space-m);
 
